@@ -205,6 +205,8 @@ JWKTL-1.0.0 (2013-08-06)
 JWKTL-1.0.1 (2014-09-30)
 - Modified: Switched to dkpro-parent-pom 9.
 - Modified: Removed missing dependency xerces:xercesImpl:2.9.1-lucene; no longer needed (#7).
+
+JWKTL-1.0.2
 - Modified: Updated to xerces 2.11.0.
 - Fixed: Dump parser is timezone dependent (#9).
- 
+- Fixed: Descendant relationship parsing bugs (#10).
